--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@iconify/react": "^6.0.0",
     "@supabase/supabase-js": "^2.53.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.535.0",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.23.0"
