--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-datepicker": "^8.4.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.23.0"
