--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "backend": "python scraper/fetch_loop.py",
     "build": "vite build",
     "preview": "vite preview",
-    "analyze": "vite-bundle-analyzer",
-    "inspect": "vite build --mode development && vite-plugin-inspect"
+    "inspect": "vite build --mode development && vite-plugin-inspect",
+    "analyze": "npm run build && npx vite-bundle-analyzer dist",
+    "dev:profile": "vite --mode development --profile",
+    "perf:measure": "npm run build && npm run preview & sleep 3 && node scripts/measure-performance.js && pkill -f 'vite preview'",
+    "perf:dev": "node scripts/measure-performance.js",
+    "test:performance": "npm run build && npm run perf:measure"
   },
   "dependencies": {
     "@iconify-icon/react": "^3.0.0",
@@ -39,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.4.38",
+    "puppeteer": "^23.11.1",
     "tailwindcss": "^3.4.1",
     "vite": "^7.0.6",
     "vite-bundle-analyzer": "^1.2.0",
